--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-docx==0.2.4
-fitz==0.0.1.dev2
+pymupdf==1.26.3 
 numpy==1.26.4 
-protobuf==6.31.1
-python_docx==1.2.0
-scikit_learn==1.7.1
+protobuf==5.29.4
+python-docx==1.2.0
+scikit-learn==1.5.1
 streamlit==1.37.1
 google-generativeai==0.8.5 
