--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-pymupdf==1.26.3 
+
+PyMuPDF==1.26.3
 numpy==1.26.4 
 python-docx==1.2.0
 scikit-learn==1.5.1
 streamlit==1.37.1
 google-generativeai==0.8.5 
-pillow==10.4.0
+
